# decky-loader

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_ZH.md  README_zh-Hans.md  flake.nix  inlang.config.js  install.sh  package-lock.json  package.json  plugin_loader.service  plugin_manager.service  plugin_template.py  requirements.txt  template_plugin.js
.cargo/: config
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: new_feature.yml  pull_request.md
.github/workflows/: build-linux-arm64.yml  build-linux-x86_64.yml  build-linux.yml  (+6 more)
act/: prerelease.json  release.json  run-act.sh
backend/: browser.py  customtypes.py  decky_plugin.pyi  helpers.py  injector.py  loader.py  localplatform.py  localplatformlinux.py  localplatformwin.py  localsocket.py  main.py  plugin.py  plugin_protocol.py  plugin_wrapper.py  pyinstaller.spec  pyproject.toml  pyrightconfig.json  requirements.txt  settings.py  updater.py  utilities.py
contrib/: deck.sh  nodeck.sh  pc.sh
frontend/: .gitignore  .prettierrc.js  i18next-parser.config.mjs  index.d.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  rollup.config.mjs  tsconfig.json
plugin/: decky_plugin.py  decky_plugin.pyi
plugin_loader/: browser.py  injector.py  loader.py  main.py  plugin.py  utilities.py
plugin_manager/: injector.py  loader.py  main.py
scripts/: collect-debug-info.sh  deckdebug.sh  plugin-info.sh  tasks.sh
src/: main.rs  plugin_page.js
(+279 files in other folders)
